# obg

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
docs/: spec-pdf.asc
src/: ccs.rs  clap.rs  config.rs  emit.rs  errors.rs  ioutils.rs  lib.rs  main.rs  pap.rs  serial.rs
src/aescbc/: cdc.rs  config.rs  gb.rs  kd.rs  mod.rs  pad.rs  rng.rs  tp.rs  xor.rs
src/hashis/: mod.rs
src/sneaker/: core.rs  io.rs  mod.rs
tests/: key.rst  ml.txt  pvn.yml  testcases.yaml
